package ca.mcmaster.se2aa4.island.team120;

public interface SearchIsland {
    String search(int batteryLevel, int startingBatteryLevel);
    
}
